# model-interpretation

./: .gitignore  CNN interpretation.ipynb  Logistic interpretation.ipynb  Train sparse models.ipynb  mnist_models.py  pyproject.toml  readme.md
experiments/: CNN interpretation MNIST.ipynb  CNN interpretation.ipynb  Grad-CAM MNIST.ipynb  Logistic interpretation.ipynb  Train sparse models.ipynb  data_util.py
experiments/data/weights/: cnn_old.pt  cnn_sparse_weight.pt  custom_cnn.pt  linear.pt
experiments/model_interpretation/: activating_patches.py  activation_patches.py  distances.py  mnist_models.py  util.py  viz.py
model_interpretation/: activating_patches.py  feature_extractor.py
model_interpretation/data/features/: convnext_base-fb_in22k_ft_in1k_mnist.pt
model_interpretation/data/weights/: cnn_sparse2.pt  cnn_sparse_old.pt  cnn_very_sparse.pt  linear_hidden.pt
models/: cnn_sparse.pt
notebooks/: Train sparse models.ipynb  img_tile.ipynb
