[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "model_interpretation"
version = "0.0.1"
authors = [
  { name="Cesar Comin"},
]
description = "Helper modules and tutorials for interpreting neural networks."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/chcomin/torchtrainer"

[tool.setuptools]
packages = ["model_interpretation"]